同步了大伟的界面视图

--- a/power_station/Application/Home/View/Station/list_view.html
+++ b/power_station/Application/Home/View/Station/list_view.html
@@ -11,11 +11,11 @@
       <include file="Common/left" />
     </div>
 
-    <!-- 主要内容 -->
+   <!-- 主要内容 -->
     <div id="right" >
     <div class="right_d">
-    	<!-- 布局视图的标题 -->
-    	<div class="lv_title1">
+        <!-- 布局视图的标题 -->
+        <div class="listview_title1">
             <span id="s_name" style="color: #1e3e50;font-size: 16px;margin: 0;padding-left:10px;line-height:50px;">苏州4#电站</span>
             <span style="cursor:pointer;color:#428bca;">[切换]</span>
             <span style="cursor:pointer;color:#428bca;margin-left:40px;font-size: 16px;">逆变器</span>
@@ -68,14 +68,14 @@
             </ul>  -->
         </div>
 
-        <div class="lv_content11" style="background-color: #F0F3F4;height:700px;">
-            <div class="chaxun" style="padding:40px;">
+        <div class="lv_content11">
+            <div class="chaxun">
                 <input type="text" name="" class="listview_shurukuang" placeholder="请输入设备编号 / 名称">
                 <button type="button" class="listview_chaxun">查询</button>
                 <div style="float:right;">
                     <ul class="list_view_ul">
                         <li>
-                          <img style="cursor:pointer;" src="__PUBLIC__/images/button_left.png">
+                          <img style="cursor:pointer;" src="http://localhost:8080/hahaha/thinkphp/Public/images/button_left.png">
                         </li>
                         <li>
                           <input type="text" name="" class="listview_shuru2">
@@ -84,7 +84,7 @@
                           <a href="" class="listview_a">跳转</a>
                         </li>
                         <li>
-                          <img style="cursor:pointer;" src="__PUBLIC__/images/button_right.png">
+                          <img style="cursor:pointer;" src="http://localhost:8080/hahaha/thinkphp/Public/images/button_right.png">
                         </li>
                     </ul>
                     <span style="float:right;">
@@ -109,6 +109,10 @@
             </div>
 
         </div>
+
+        
+          
+
         </div>
 
     </div>
