--- a/power_station/Application/Home/View/Station/power_station_monitor.html
+++ b/power_station/Application/Home/View/Station/power_station_monitor.html
@@ -15,203 +15,203 @@
        <include file="Common/left" />
     </div>
 
-    <!-- 主要内容 123 -->
+       <!-- 主要内容 -->
     <div id="right" >
     <div class="right_d">
-    	<!-- 电站监控的标题 -->
-    	<div class="right1_d">
-    		<div class="right1_left">
-    			<ul class="right1_ul1">
-    				<li >
-    					<span style="background:#16da16;border-radius: 50%;width: 10px;height: 10px;display: inline-block;margin-right:5px;margin-top:8px;"></span>
-    				</li>
-    				<li >
-    					<span id="s_name" style="font-size: 20px;color: #000000;">苏州4#电站</span>
-    					<span>[切换换]</span>
-    				</li>
-    				<li style="margin-left:20px;margin-top:6px">
-    					<span>定位</span>
-    				</li>
-    				<li style="margin-left:20px;margin-top:6px">
-    					<span>实景图</span>
-    				</li>
-    				
-    			</ul>
-            	<ul style="padding-left:20px;bottom:10px;">
-    				<span>最后更新于 2016-11-29 15:24:42</span>
-    			</ul>
-    		</div>
+        <!-- 电站监控的标题 -->
+        <div class="right1_d">
+            <div class="right1_left">
+                <ul class="right1_ul1">
+                    <li >
+                        <span style="background:#16da16;border-radius: 50%;width: 10px;height: 10px;display: inline-block;margin-right:5px;margin-top:8px;"></span>
+                    </li>
+                    <li >
+                        <span id="s_name" style="font-size: 20px;color: #000000;">苏州4#电站</span>
+                        <span>[切换]</span>
+                    </li>
+                    <li style="margin-left:20px;margin-top:6px">
+                        <span>定位</span>
+                    </li>
+                    <li style="margin-left:20px;margin-top:6px">
+                        <span>实景图</span>
+                    </li>
+                    
+                </ul>
+                <ul style="padding-left:20px;bottom:10px;">
+                    <span>最后更新于 2016-11-29 15:24:42</span>
+                </ul>
+            </div>
  
-    		<div class="right1_right">
-    			<div class="right1_right_div">
-    				<div style="padding-top:10px">
-    					<span class="right1_right_span1">1</span>
-    				</div>
-    				<div>
-    					<span class="right1_right_span2">电站数量</span>
-    				</div>
-    			</div>
-    			<div class="right1_right_div">
-    				<div style="padding-top:10px">
-    					<span class="right1_right_span1">25</span>
-    					<span class="right1_right_span3">kw</span>
-    				</div>
-    				<div >
-    					<span class="right1_right_span2">总装机量</span>
-    				</div>
-    			</div>
-    			<div class="right1_right_div">
-    				<div style="padding-top:10px">
-    					<span class="right1_right_span1">5.4299</span>
-    					<span class="right1_right_span3">万度</span>
-    				</div>
-    				<div>
-    					<span class="right1_right_span2">累计发电量</span>
-    				</div>
-    			</div>
-    			<div class="right1_right_div">
-    				<div style="padding-top:10px">
-    					<span class="right1_right_span1">42.624</span>
-    					<span class="right1_right_span3">吨</span>
-    				</div>
-    				<div>
-    					<span class="right1_right_span2">二氧化碳减排</span>
-    				</div>
-    			</div>
-    		</div>
-    		
-    	</div>
+            <div class="right1_right">
+                <div class="right1_right_div">
+                    <div style="padding-top:10px">
+                        <span class="right1_right_span1_1">1</span>
+                    </div>
+                    <div>
+                        <span class="right1_right_span2">电站数量</span>
+                    </div>
+                </div>
+                <div class="right1_right_div">
+                    <div style="padding-top:10px">
+                        <span class="right1_right_span1_2">25</span>
+                        <span class="right1_right_span3">kw</span>
+                    </div>
+                    <div >
+                        <span class="right1_right_span2">总装机量</span>
+                    </div>
+                </div>
+                <div class="right1_right_div">
+                    <div style="padding-top:10px">
+                        <span class="right1_right_span1_3">5.4299</span>
+                        <span class="right1_right_span3">万度</span>
+                    </div>
+                    <div>
+                        <span class="right1_right_span2">累计发电量</span>
+                    </div>
+                </div>
+                <div class="right1_right_div">
+                    <div style="padding-top:10px">
+                        <span class="right1_right_span1_4">42.624</span>
+                        <span class="right1_right_span3">吨</span>
+                    </div>
+                    <div>
+                        <span class="right1_right_span2">二氧化碳减排</span>
+                    </div>
+                </div>
+            </div>
+            
+        </div>
 
-    	<!--  实时功率累计发电量的div  -->
-    	<div class="right2_d" style="overflow:auto;">
-    		<!--第1个矩形框-->
-    		<div class="right2_div">
-    			<div class="right2_div2_setbkcolor" style="background-color:#E74C3C;">
-    				<div class="right2_div3">
-    					<div class="right2_div5">
-    						<img src="__PUBLIC__/images/right2_power.png" style="vertical-align: middle;width:100%;max-width:80px;padding-top:5px;">
-    					</div>
-    					<div class="right2_div6">
-    						<div>
-    							<span style="color:#FFFFFF;margin:0;padding:0;">实时功率</span>
-    						</div>
-    						<div style="padding:0;height:55px;">
-    							<span style="font-size:42px;color:#FFFFFF;">9.8</span>
-    							<span style="font-size:30px;color:#FFFFFF;padding:0;"">kw</span>
-    						</div>
-    					</div>
-    				</div>
-    				<div class="right2_div4">
-    					<div class="right2_div8">
-    						<span style="display:block;color:#FFFFFF;margin-top:20px;font-size:15px;">出力比</span>
-    						<span style="display:block;color:#FFFFFF;font-size:18px;">45.2%</span>
-    					</div> 
-    					<div class="right2_div9">
-    						<span style="display:block;color:#FFFFFF;margin-top:20px;font-size:15px;">光照强度</span>
-    						<span style="display:block;color:#FFFFFF;font-size:18px;">608W/m2</span>
-    					</div>
-    				</div>
-    			</div>
-    		</div>
-    		<!--第2个矩形框-->
-    		<div class="right2_div">
-    			<div class="right2_div2_setbkcolor" style="background-color:#1CAF9A;">
-    				<div class="right2_div3">
-    					<div class="right2_div5">
-    						<img src="__PUBLIC__/images/right2_dayelec.png" style="vertical-align: middle;width:100%;max-width:80px;padding-top:5px;">
-    					</div>
-    					<div class="right2_div6">
-    						<div>
-    							<span style="color:#FFFFFF;margin:0;padding:0;">日发电量</span>
-    						</div>
-    						<div style="padding:0;height:55px;">
-    							<span style="font-size:42px;color:#FFFFFF;">24.2</span>
-    							<span style="font-size:30px;color:#FFFFFF;padding:0;"">度</span>
-    						</div>
-    					</div>
-    				</div>
-    				<div class="right2_div4">
-    					<div class="right2_div8">
-    						<span style="display:block;color:#FFFFFF;margin-top:20px;font-size:15px;">日辐射总量</span>
-    						<span style="display:block;color:#FFFFFF;font-size:18px;">2.539kWh/m2</span>
-    					</div> 
-    					<div class="right2_div9">
-    						<span style="display:block;color:#FFFFFF;margin-top:20px;font-size:15px;">日发电小时数</span>
-    						<span style="display:block;color:#FFFFFF;font-size:18px;">1h</span>
-    					</div>
-    				</div>
-    			</div>
-    		</div>
-    		<!--第3个矩形框-->
-    		<div class="right2_div">
-    			<div class="right2_div2_setbkcolor" style="background-color:#428BCA;">
-    				<div class="right2_div3">
-    					<div class="right2_div5">
-    						<img src="__PUBLIC__/images/right2_monthelec.png" style="vertical-align: middle;width:100%;max-width:80px;padding-top:5px;">
-    					</div>
-    					<div class="right2_div6">
-    						<div>
-    							<span style="color:#FFFFFF;margin:0;padding:0;">月累计发电量</span>
-    						</div>
-    						<div style="padding:0;height:55px;">
-    							<span style="font-size:42px;color:#FFFFFF;">1988.8</span>
-    							<span style="font-size:30px;color:#FFFFFF;padding:0;"">度</span>
-    						</div>
-    					</div>
-    				</div>
-    				<div class="right2_div4">
-    					<div class="right2_div8">
-    						<span style="display:block;color:#FFFFFF;margin-top:20px;font-size:15px;">月辐射总量</span>
-    						<span style="display:block;color:#FFFFFF;font-size:18px;">110.13kWh/m2</span>
-    					</div> 
-    					<div class="right2_div9">
-    						<span style="display:block;color:#FFFFFF;margin-top:20px;font-size:15px;">月发电小时数</span>
-    						<span style="display:block;color:#FFFFFF;font-size:18px;">79.6h</span>
-    					</div>
-    				</div>
-    			</div>
-    		</div>
-    		<!--第4个矩形框-->
-    		<div class="right2_div">
-    			<div class="right2_div2_setbkcolor" style="background-color:#1D2939;">
-    				<div class="right2_div3">
-    					<div class="right2_div5">
-    						<img src="__PUBLIC__/images/right2_yearelec.png" style="vertical-align: middle;width:100%;max-width:80px;padding-top:5px;">
-    					</div>
-    					<div class="right2_div6">
-    						<div>
-    							<span style="color:#FFFFFF;margin:0;padding:0;">年累计发电量</span>
-    						</div>
-    						<div style="padding:0;height:55px;">
-    							<span style="font-size:42px;color:#FFFFFF;">2.7547</span>
-    							<span style="font-size:30px;color:#FFFFFF;padding:0;"">万度</span>
-    						</div>
-    					</div>
-    				</div>
-    				<div class="right2_div4">
-    					<div class="right2_div8">
-    						<span style="display:block;color:#FFFFFF;margin-top:20px;font-size:15px;">年辐射总量</span>
-    						<span style="display:block;color:#FFFFFF;font-size:18px;">1.5238MWh/m2</span>
-    					</div> 
-    					<div class="right2_div9">
-    						<span style="display:block;color:#FFFFFF;margin-top:20px;font-size:15px;">年发电小时数</span>
-    						<span style="display:block;color:#FFFFFF;font-size:18px;">1101.9h</span>
-    					</div>
-    				</div>
-    			</div>
-    		</div>
-    	</div>
+        <!--  实时功率累计发电量的div  -->
+        <div class="right2_d" style="overflow:auto;">
+            <!--第1个矩形框-->
+            <div class="right2_div">
+                <div class="right2_div2_setbkcolor" style="background-color:#E74C3C;">
+                    <div class="right2_div3">
+                        <div class="right2_div5">
+                            <img src="__PUBLIC__/images/right2_power.png" style="vertical-align: middle;width:100%;max-width:80px;padding-top:5px;">
+                        </div>
+                        <div class="right2_div6">
+                            <div>
+                                <span style="color:#FFFFFF;margin:0;padding:0;">实时功率</span>
+                            </div>
+                            <div style="padding:0;height:55px;">
+                                <span class="power_station_monitor_power power_energy_numstyle">9.8</span>
+                                <span style="font-size:30px;color:#FFFFFF;padding:0;"">kw</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="right2_div4">
+                        <div class="right2_div8">
+                            <span style="display:block;color:#FFFFFF;margin-top:20px;font-size:15px;">出力比</span>
+                            <span style="display:block;color:#FFFFFF;font-size:18px;">45.2%</span>
+                        </div> 
+                        <div class="right2_div9">
+                            <span style="display:block;color:#FFFFFF;margin-top:20px;font-size:15px;">光照强度</span>
+                            <span style="display:block;color:#FFFFFF;font-size:18px;">608W/m2</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!--第2个矩形框-->
+            <div class="right2_div">
+                <div class="right2_div2_setbkcolor" style="background-color:#1CAF9A;">
+                    <div class="right2_div3">
+                        <div class="right2_div5">
+                            <img src="__PUBLIC__/images/right2_dayelec.png" style="vertical-align: middle;width:100%;max-width:80px;padding-top:5px;">
+                        </div>
+                        <div class="right2_div6">
+                            <div>
+                                <span style="color:#FFFFFF;margin:0;padding:0;">日发电量</span>
+                            </div>
+                            <div style="padding:0;height:55px;">
+                                <span class="power_station_monitor_dayenergy power_energy_numstyle">24.2</span>
+                                <span style="font-size:30px;color:#FFFFFF;padding:0;"">度</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="right2_div4">
+                        <div class="right2_div8">
+                            <span style="display:block;color:#FFFFFF;margin-top:20px;font-size:15px;">日辐射总量</span>
+                            <span style="display:block;color:#FFFFFF;font-size:18px;">2.539kWh/m2</span>
+                        </div> 
+                        <div class="right2_div9">
+                            <span style="display:block;color:#FFFFFF;margin-top:20px;font-size:15px;">日发电小时数</span>
+                            <span style="display:block;color:#FFFFFF;font-size:18px;">1h</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!--第3个矩形框-->
+            <div class="right2_div">
+                <div class="right2_div2_setbkcolor" style="background-color:#428BCA;">
+                    <div class="right2_div3">
+                        <div class="right2_div5">
+                            <img src="__PUBLIC__/images/right2_monthelec.png" style="vertical-align: middle;width:100%;max-width:80px;padding-top:5px;">
+                        </div>
+                        <div class="right2_div6">
+                            <div>
+                                <span style="color:#FFFFFF;margin:0;padding:0;">月累计发电量</span>
+                            </div>
+                            <div style="padding:0;height:55px;">
+                                <span class="power_energy_numstyle">1988.8</span>
+                                <span style="font-size:30px;color:#FFFFFF;padding:0;"">度</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="right2_div4">
+                        <div class="right2_div8">
+                            <span style="display:block;color:#FFFFFF;margin-top:20px;font-size:15px;">月辐射总量</span>
+                            <span style="display:block;color:#FFFFFF;font-size:18px;">110.13kWh/m2</span>
+                        </div> 
+                        <div class="right2_div9">
+                            <span style="display:block;color:#FFFFFF;margin-top:20px;font-size:15px;">月发电小时数</span>
+                            <span style="display:block;color:#FFFFFF;font-size:18px;">79.6h</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!--第4个矩形框-->
+            <div class="right2_div">
+                <div class="right2_div2_setbkcolor" style="background-color:#1D2939;">
+                    <div class="right2_div3">
+                        <div class="right2_div5">
+                            <img src="__PUBLIC__/images/right2_yearelec.png" style="vertical-align: middle;width:100%;max-width:80px;padding-top:5px;">
+                        </div>
+                        <div class="right2_div6">
+                            <div>
+                                <span style="color:#FFFFFF;margin:0;padding:0;">年累计发电量</span>
+                            </div>
+                            <div style="padding:0;height:55px;">
+                                <span class="power_energy_numstyle">2.7547</span>
+                                <span style="font-size:30px;color:#FFFFFF;padding:0;"">万度</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="right2_div4">
+                        <div class="right2_div8">
+                            <span style="display:block;color:#FFFFFF;margin-top:20px;font-size:15px;">年辐射总量</span>
+                            <span style="display:block;color:#FFFFFF;font-size:18px;">1.5238MWh/m2</span>
+                        </div> 
+                        <div class="right2_div9">
+                            <span style="display:block;color:#FFFFFF;margin-top:20px;font-size:15px;">年发电小时数</span>
+                            <span style="display:block;color:#FFFFFF;font-size:18px;">1101.9h</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
-    	<!-- 功率曲线图的div  -->
-    	<div class="right3_d"> 
-    		<div id="line_chart1" class="right3_div1_whitebg">
-    			<div id="line_chart2" style="top:20px;width:100%;height:100%;background-color: #FFFFFF;">
-    			</div>
-    		</div>
-    		<div id="right_bottom">
-    		</div>
+        <!-- 功率曲线图的div  -->
+        <div class="right3_d"> 
+            <div id="line_chart1" class="right3_div1_whitebg">
+                <div id="line_chart2" style="width:100%;height:100%;background-color: #FFFFFF;">
+                </div>
+            </div>
+            <div id="right_bottom">
+            </div>
       
-    	</div>
+        </div>
 
 
     </div>
