--- a/power_station/Application/Home/View/Station/power_station_trend.html
+++ b/power_station/Application/Home/View/Station/power_station_trend.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" type="text/css" href="__PUBLIC__/Static/bootstrap-3.3.0-dist/dist/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="__PUBLIC__/style/common/sidebar.css">
     <link rel="stylesheet" type="text/css" href="__PUBLIC__/style/common/menu.css">
-    <link rel="stylesheet" type="text/css" href="__PUBLIC__/style/station/power_station_monitor.css">
+    <link rel="stylesheet" type="text/css" href="__PUBLIC__/style/station/david_power_station_monitor.css">
     <link type="image/x-icon" rel="shortcut icon" href="__PUBLIC__/images/favicon.ico">
 
     <link rel="stylesheet" type="text/css" href="__PUBLIC__/style/station/jquery.datetimepicker.css">
@@ -78,69 +78,36 @@
     <!-- 主要内容 -->
     <div id="right" >
     <div class="right_d">
-    	<!-- 布局视图的标题 -->
-    	<div class="lv_title1">
+      <!-- 布局视图的标题 -->
+      <div class="power_station_trend_title1">
             <span id="s_name" style="color: #1e3e50;font-size: 16px;margin: 0;padding-left:10px;line-height:50px;">苏州4#电站</span>
             <span style="cursor:pointer;color:#428bca;">[切换]</span>
         
-        </div>
+      </div>
 
-        <div class="lv_content11" style="background-color: #F0F3F4;height:700px;">
+        <div class="power_station_trend_content11">
 
-            <div class="chaxun" style="min-width:1300px;height:70px;">
-                <div class="running_log2" style="float:left;width:750px;height:50px;margin-top:10px;padding:5px;display:inline-block;">
-                  <span style="float:left;padding:10px 20px;">功率趋势图</span>
-                 
+
+            <div class="history_data_query_top_abs">
+            <div class="running_log_huiliuxiang_line">
+                <div class="running_log2">
+                  <span style="float:left;padding-top:10px;padding-left:10px;padding-right:30px;">功率趋势图</span>
                   <input type="text" name="" id="datetimepicker" class="listview_shuru2" style="width:150px;height:38px;margin-left:15px;">
-                  <span class="running_log_zhi" style="float:left;display:inline-block;margin-left:-198px;">至</span>
-                  <input type="text" name="" id="datetimepicker2" class="listview_shuru2" style="width:150px;height:38px;margin-left:48px;">
+                  <!-- <span style="float:left;">至</span> -->
+                  <!-- <button> qq</button> -->
+                  <span class="running_log_zhi">至</span>
+                  <input type="text" name="" id="datetimepicker2" class="listview_shuru2" style="width:150px;height:38px;margin-left:0px;">
+
+                  <!-- <button>ahah</button> -->
 
                   <button type="button" class="running_log_chaxun">查询</button>
-                  <p style="display: inline-block;margin-left:100px;padding:10px 10px;"><input type="checkbox" name="category" value="财经" style="margin-left:0px;padding:10px 5px;" />功率归一化</p>
-
+                  <p style="display: inline-block;margin-left:30px;padding:10px 10px;"><input type="checkbox" name="category" value="财经" style="margin-left:0px;padding:10px 5px;" />功率归一化</p>
                 </div>
-             <!--    <div class="running_log3" style="float:right;display:inline-block;padding-top:20px;">
-                    <ul class="list_view_ul">
-                        <li>
-                          <img style="cursor:pointer;" src="./images/button_left.png">
-                        </li>
-                        <li>
-                          <input type="text" name="" class="listview_shuru2">
-                        </li>
-                        <li>
-                          <a href="" class="listview_a">跳转</a>
-                        </li>
-                        <li>
-                          <img style="cursor:pointer;" src="./images/button_right.png">
-                        </li>
-                    </ul>
-                    <span style="float:right;">
-                        <small class="meiyexianshi">每页显示:</small>
-                        <select class="listview_select">
-                          <option checked value="10">10</option>
-                          <option value="20">20</option>
-                          <option value="20">30</option>
-                          <option value="20">50</option>
-                          <option value="20">100</option>
-                        </select>
-                        <small class="meiyexianshi">页数1/1</small>
-
-                    </span>
-                </div> -->
+               
             </div>
-        <!--     <div class="quanbu_div">
-              <ul style="border: 0px;background-color: #1c2a36;color: #fff;list-style: none;height:42px;padding:0 0;">
-                <li class="running_log_li">全部</li>
-                <li class="running_log_li">通讯中断</li>
-                <li class="running_log_li">故障</li>
-                <li class="running_log_li">报警</li>
-                <li class="running_log_li">正常运行</li>
-                <li class="running_log_li">待机</li>
-                <li class="running_log_li">启动中</li>
-                <li class="running_log_li">关机中</li>
-                <li class="running_log_li">停机</li>
-              </ul>
-            </div> -->
+            </div>
+            
+      
             <div class="trouble_alarm_table">
               <table id="troublealarm_table1" class="troublealarm_table1c">
                 
