--- a/power_station/Application/Home/View/Station/running_log.html
+++ b/power_station/Application/Home/View/Station/running_log.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" type="text/css" href="__PUBLIC__/Static/bootstrap-3.3.0-dist/dist/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="__PUBLIC__/style/common/sidebar.css">
     <link rel="stylesheet" type="text/css" href="__PUBLIC__/style/common/menu.css">
-    <link rel="stylesheet" type="text/css" href="__PUBLIC__/style/station/power_station_monitor.css">
+    <link rel="stylesheet" type="text/css" href="__PUBLIC__/style/station/david_power_station_monitor.css">
     <link type="image/x-icon" rel="shortcut icon" href="__PUBLIC__/images/favicon.ico">
     <link rel="stylesheet" type="text/css" href="__PUBLIC__/style/station/jquery.datetimepicker.css">
     
@@ -79,17 +79,19 @@
     <!-- 主要内容 -->
     <div id="right" >
     <div class="right_d">
-    	<!-- 布局视图的标题 -->
-    	<div class="lv_title1">
+      <!-- 布局视图的标题 -->
+      <div class="running_log_title1">
             <span id="s_name" style="color: #1e3e50;font-size: 16px;margin: 0;padding-left:10px;line-height:50px;">苏州4#电站</span>
             <span style="cursor:pointer;color:#428bca;">[切换]</span>
         
         </div>
 
-        <div class="lv_content11" style="background-color: #F0F3F4;height:700px;">
+        <div class="running_log_content11">
 
-            <div class="chaxun" style="min-width:1300px;height:70px;">
-                <div class="running_log2" style="float:left;width:750px;height:50px;margin-top:10px;padding:5px;display:inline-block;">
+
+            <div class="running_log_top_abso">
+            <div class="running_log_huiliuxiang_line">
+                <div class="running_log2">
                   <select class="running_log_select">
                       <option checked value="huiliuxiang">汇流箱</option>
                       <option value="nibianqi">逆变器</option>
@@ -105,16 +107,20 @@
                       <option value="qixiangzhan">WD04A</option>
                   </select>
                   <input type="text" name="" id="datetimepicker" class="listview_shuru2" style="width:150px;height:38px;margin-left:15px;">
+                  <!-- <span style="float:left;">至</span> -->
+                  <!-- <button> qq</button> -->
                   <span class="running_log_zhi">至</span>
-                  <input type="text" name="" id="datetimepicker2" class="listview_shuru2" style="width:150px;height:38px;margin-left:48px;">
+                  <input type="text" name="" id="datetimepicker2" class="listview_shuru2" style="width:150px;height:38px;margin-left:0px;">
+
+                  <!-- <button>ahah</button> -->
 
                   <button type="button" class="running_log_chaxun">查询</button>
 
                 </div>
-                <div class="running_log3" style="float:right;display:inline-block;padding-top:20px;">
+                <div class="running_log3" style="float:right;display:inline-block;padding-top:18px;padding-right:15px;">
                     <ul class="list_view_ul">
                         <li>
-                          <img style="cursor:pointer;" src="__PUBLIC__/images/button_left.png">
+                          <img style="cursor:pointer;" src="http://localhost:8080/hahaha/thinkphp/Public/images/button_left.png">
                         </li>
                         <li>
                           <input type="text" name="" class="listview_shuru2">
@@ -123,7 +129,7 @@
                           <a href="" class="listview_a">跳转</a>
                         </li>
                         <li>
-                          <img style="cursor:pointer;" src="__PUBLIC__/images/button_right.png">
+                          <img style="cursor:pointer;" src="http://localhost:8080/hahaha/thinkphp/Public/images/button_right.png">
                         </li>
                     </ul>
                     <span style="float:right;">
@@ -153,7 +159,10 @@
                 <li class="running_log_li">停机</li>
               </ul>
             </div>
-            <div class="trouble_alarm_table">
+            </div>
+
+
+            <div class="running_log_table">
               <table id="troublealarm_table1" class="troublealarm_table1c">
                 
               </table>
