--- a/power_station/Application/Home/View/Common/topbar.html
+++ b/power_station/Application/Home/View/Common/topbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-default" rol="navigation" style="height: 50px; ">
   <div class="container-fluid" style="text-align: center;">
-    <span style="line-height: 50px; font-size: 25px; color:#777;">数据可视化中心</span>
+    <span style="line-height: 50px; font-size: 25px; color:#777;">光伏智能电站监控系统</span>
     <div class="navbar-header">
     <!--
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
@@ -11,7 +11,7 @@
       </button>
     -->
       <a class="navbar-brand" href="#">
-        <p style="margin-top:-13px"><img alt="brand" src="__PUBLIC__/images/pc_header_logo.png" > &nbsp;新能云</p>
+        <p style="margin-top:-13px"><img alt="brand" src="__PUBLIC__/images/pc_header_logo.png" > &nbsp;光伏电站</p>
       </a>
     </div>
 
@@ -34,7 +34,7 @@
               <span class="yanshi" style="text-align:center;color:black">演示用户</span>
               <b class="down" style="color:black"></b>
               <ul class="dropdown_menu">
-                  <li class="down_li" style="background-color:rgba(236,240,241,1)">新能源演示</li>
+                  <li class="down_li" style="background-color:rgba(236,240,241,1)">光伏智能电站监控演示</li>
                   <li style="height:1px;margin:9px 0px;overflow:hidden;background-color: #e5e5e5;"></li>
                   <li id="li_manage" class="down_li col">电站管理</li>
                   <li id="li_person" class="down_li col">个人信息</li>
