--- a/power_station/Application/Home/View/Index/entrance.html
+++ b/power_station/Application/Home/View/Index/entrance.html
@@ -8,14 +8,14 @@
 	<link rel="stylesheet" type="text/css" href="__PUBLIC__/Static/sweetalert-master/dist/sweetalert.css">
 	<link type="image/x-icon" rel="shortcut icon" href="__PUBLIC__/images/favicon.ico">
 
-	<title>新能云</title>
+	<title>光伏电站</title>
 </head>
 <body>
 	<div id="div1">
 		<img src="__PUBLIC__/images/bg.jpg">
 	</div>
 	<div id="div2">
-		<span>新能云集中监控系统</span>
+		<span>光伏智能电站监控系统</span>
 	</div>
 	<!--map-->
 	<div id="main"></div>
