--- a/power_station/Application/Home/View/User/Register.html
+++ b/power_station/Application/Home/View/User/Register.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="__PUBLIC__/style/main.css">
 	<link rel="stylesheet" type="text/css" href="__PUBLIC__/Static/bootstrap-3.3.0-dist/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="__PUBLIC__/Static/sweetalert-master/dist/sweetalert.css">
-	<title>新能源系统</title>
+	<title>光伏电站</title>
 </head>
 <body>
 	<div style="height:50px;background-color:#fff;border:1px solid #f2f2f2;z-index:1">
