--- a/power_station/Application/Home/View/User/index.html
+++ b/power_station/Application/Home/View/User/index.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="__PUBLIC__/style/main.css">
 	<link rel="stylesheet" type="text/css" href="__PUBLIC__/Static/bootstrap-3.3.0-dist/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="__PUBLIC__/Static/sweetalert-master/dist/sweetalert.css">
-	<title>新能源系统登陆</title>
+	<title>光伏电站系统登陆</title>
 </head>
 <body style="background-image:url(__PUBLIC__/images/loginBg.jpg)">
 	<div style="width:100%" class="container">
