--- a/power_station/Application/Home/View/AnalysisView/power_generation.html
+++ b/power_station/Application/Home/View/AnalysisView/power_generation.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>数据可视化</title> 
+    <title>光伏电站</title> 
     <link rel="stylesheet" type="text/css" href="__PUBLIC__/Static/bootstrap-3.3.0-dist/dist/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="__PUBLIC__/Static/font-awesome-4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="__PUBLIC__/Static/simple-line-icons-master/css/simple-line-icons.css" >
@@ -79,7 +79,7 @@
                     </span>
                     <button class="btn btn-sm btn-info" id="powerChartBtn" style="z-index: 777">数据表格</button>
                   </span>
-                  <div id="powerChart" style="width: 100%;height:670px; "></div>
+                  <div id="powerChart" style="width: 100%;min-height:670px;height: 100%;"></div>
                 </div>
 
                 <div id="powerTableView" class="hidden">
