修改了监控视图的一些bug

--- a/power_station/Application/Home/View/Station/device_power_trend.html
+++ b/power_station/Application/Home/View/Station/device_power_trend.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" type="text/css" href="__PUBLIC__/Static/bootstrap-3.3.0-dist/dist/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="__PUBLIC__/style/common/sidebar.css">
     <link rel="stylesheet" type="text/css" href="__PUBLIC__/style/common/menu.css">
-    <link rel="stylesheet" type="text/css" href="__PUBLIC__/style/station/power_station_monitor.css">
+    <link rel="stylesheet" type="text/css" href="__PUBLIC__/style/station/david_power_station_monitor.css">
     <link type="image/x-icon" rel="shortcut icon" href="__PUBLIC__/images/favicon.ico">
 
     <link rel="stylesheet" type="text/css" href="__PUBLIC__/style/station/jquery.datetimepicker.css">
@@ -80,15 +80,15 @@
     <div id="right" >
     <div class="right_d">
     	<!-- 布局视图的标题 -->
-    	<div class="lv_title1">
+    	<div class="device_power_trend_title1">
             <span id="s_name" style="color: #1e3e50;font-size: 16px;margin: 0;padding-left:10px;line-height:50px;">苏州4#电站</span>
             <span style="cursor:pointer;color:#428bca;">[切换]</span>
         
         </div>
 
-        <div class="lv_content11" style="background-color: #F0F3F4;height:700px;">
+        <div class="device_power_trend_content11" style="background-color: #F0F3F4;">
 
-            <div class="chaxun" style="min-width:1300px;height:70px;">
+            <div class="device_power_trend_chaxun" style="min-width:1300px;height:70px;">
                 <div class="running_log2" style="float:left;width:1000px;height:50px;margin-top:10px;padding:5px;display:inline-block;">
                   <span style="float:left;padding:10px 5px;display:inline-block;">设备总数</span>
                   <span style="float:left;padding:10px 10px;display:inline-block;">   17台</span>
