--- a/power_station/Application/Home/View/Station/trouble_alarm.html
+++ b/power_station/Application/Home/View/Station/trouble_alarm.html
@@ -29,7 +29,7 @@
               <div class="anjibie">
                 <div class="anjibie1">
                   <div style="padding-top:15px;">
-                    <img src="http://localhost:8080/hahaha/thinkphp/Public/images/anjibie.png">
+                    <img src="__PUBLIC__/images/anjibie.png">
                   </div>
                   <span style="color:#ffffff;font-size:16px;">按级别</span>
                 </div>
@@ -45,7 +45,7 @@
               <div class="anshebei">
                 <div class="anshebei1">
                   <div style="padding-top:15px;">
-                    <img src="http://localhost:8080/hahaha/thinkphp/Public/images/anshebei.png">
+                    <img src="__PUBLIC__/images/anshebei.png">
                   </div>
                   <span style="color:#ffffff;font-size:16px;">按设备</span>
                 </div>
@@ -69,7 +69,7 @@
               <div class="anshijian">
                 <div class="anshijian1">
                    <div style="padding-top:15px;">
-                    <img src="http://localhost:8080/hahaha/thinkphp/Public/images/anshijian.png">
+                    <img src="__PUBLIC__/images//anshijian.png">
                   </div>
                   <span style="color:#ffffff;font-size:16px;">按时间</span>
                 </div>
@@ -93,7 +93,7 @@
                 <div style="float:right;">
                     <ul class="list_view_ul">
                         <li>
-                          <img style="cursor:pointer;" src="http://localhost:8080/hahaha/thinkphp/Public/images/button_left.png">
+                          <img style="cursor:pointer;" src="__PUBLIC__/images/button_left.png">
                         </li>
                         <li>
                           <input type="text" name="" class="listview_shuru2">
@@ -102,7 +102,7 @@
                           <a href="" class="listview_a">跳转</a>
                         </li>
                         <li>
-                          <img style="cursor:pointer;" src="http://localhost:8080/hahaha/thinkphp/Public/images/button_right.png">
+                          <img style="cursor:pointer;" src="__PUBLIC__/images/button_right.png">
                         </li>
                     </ul>
                     <span style="float:right;">
