--- a/power_station/Application/Home/View/Station/history_data_query.html
+++ b/power_station/Application/Home/View/Station/history_data_query.html
@@ -60,7 +60,7 @@
     }
     </style>
   </head>
-  <body onload="decodeMessage()">
+  <body>
   	
     <!-- 顶部导航条 -->
     <div id="topbar">
@@ -119,7 +119,7 @@
                 <div class="running_log3" style="float:right;display:inline-block;padding-top:18px;padding-right:15px;">
                     <ul class="list_view_ul">
                         <li>
-                          <img style="cursor:pointer;" src="http://localhost:8080/hahaha/thinkphp/Public/images/button_left.png">
+                          <img style="cursor:pointer;" src="__PUBLIC__/images/button_left.png">
                         </li>
                         <li>
                           <input type="text" name="" class="listview_shuru2">
@@ -128,7 +128,7 @@
                           <a href="" class="listview_a">跳转</a>
                         </li>
                         <li>
-                          <img style="cursor:pointer;" src="http://localhost:8080/hahaha/thinkphp/Public/images/button_right.png">
+                          <img style="cursor:pointer;" src="__PUBLIC__/images/button_right.png">
                         </li>
                     </ul>
                     <span style="float:right;">
