--- a/power_station/Application/Home/View/Station/list_view.html
+++ b/power_station/Application/Home/View/Station/list_view.html
@@ -75,7 +75,7 @@
                 <div style="float:right;">
                     <ul class="list_view_ul">
                         <li>
-                          <img style="cursor:pointer;" src="http://localhost:8080/hahaha/thinkphp/Public/images/button_left.png">
+                          <img style="cursor:pointer;" src="__PUBLIC__/images/button_left.png">
                         </li>
                         <li>
                           <input type="text" name="" class="listview_shuru2">
@@ -84,7 +84,7 @@
                           <a href="" class="listview_a">跳转</a>
                         </li>
                         <li>
-                          <img style="cursor:pointer;" src="http://localhost:8080/hahaha/thinkphp/Public/images/button_right.png">
+                          <img style="cursor:pointer;" src="__PUBLIC__/images/button_right.png">
                         </li>
                     </ul>
                     <span style="float:right;">
