--- a/power_station/Application/Home/View/Station/running_log.html
+++ b/power_station/Application/Home/View/Station/running_log.html
@@ -120,7 +120,7 @@
                 <div class="running_log3" style="float:right;display:inline-block;padding-top:18px;padding-right:15px;">
                     <ul class="list_view_ul">
                         <li>
-                          <img style="cursor:pointer;" src="http://localhost:8080/hahaha/thinkphp/Public/images/button_left.png">
+                          <img style="cursor:pointer;" src="__PUBLIC__/images/button_left.png">
                         </li>
                         <li>
                           <input type="text" name="" class="listview_shuru2">
@@ -129,7 +129,7 @@
                           <a href="" class="listview_a">跳转</a>
                         </li>
                         <li>
-                          <img style="cursor:pointer;" src="http://localhost:8080/hahaha/thinkphp/Public/images/button_right.png">
+                          <img style="cursor:pointer;" src="__PUBLIC__/images/button_right.png">
                         </li>
                     </ul>
                     <span style="float:right;">
