--- a/power_station/Application/Home/View/User/index.html
+++ b/power_station/Application/Home/View/User/index.html
@@ -67,5 +67,6 @@
 <script type="text/javascript" src="__PUBLIC__/Static/Jquery/jquery.form.js"></script>
 <script type="text/javascript" src="__PUBLIC__/Static/sweetalert-master/dist/sweetalert.min.js"></script>
 <script type="text/javascript" src="__PUBLIC__/Static/sweetalert-master/dist/sweetalert-dev.js"></script>
+<script type="text/javascript">var url = "{:U('Index/entrance')}"</script>
 <script type="text/javascript" src="__PUBLIC__/script/Login.js"></script>
 </html>
