新增js控制电站名称

--- a/power_station/Application/Home/View/AnalysisView/meteorological_resources.html
+++ b/power_station/Application/Home/View/AnalysisView/meteorological_resources.html
@@ -33,7 +33,8 @@
         <!-- 主内容标题栏 -->
         <div class="col-sm-12 overview-title">
           <div class="pull-left overview-title-font">
-            <span>龙游瑞源光伏电站</span>
+            <i class="fa fa-circle" style="color:#16da16; font-size: 10px;"></i>
+            <span id="s_name"></span>
             <span style="cursor:pointer;color: #428bca; font-size: 13px;">[切换]</span>
             <span style="padding-left: 10px"><img src="__PUBLIC__/images/date.png">
               <span id="title-day" class="overview-title-time">日</span>
