--- a/power_station/Application/Home/View/AnalysisView/power_generation.html
+++ b/power_station/Application/Home/View/AnalysisView/power_generation.html
@@ -31,7 +31,8 @@
         <!-- 主内容标题栏 -->
         <div class="col-sm-12 overview-title">
           <div class="pull-left overview-title-font">
-            <span>龙游瑞源光伏电站</span>
+            <i class="fa fa-circle" style="color:#16da16; font-size: 10px;"></i>
+            <span id="s_name"></span>
             <span style="cursor:pointer;color: #428bca; font-size: 13px;">[切换]</span>
             <span style="padding-left: 10px"><img src="__PUBLIC__/images/date.png">
               <span id="title-day" class="overview-title-time">日</span>
@@ -199,7 +200,6 @@
             type: 'value',
             name: 'kWh',
             min: '0',
-            max: '800000',
             axisLine: {
               lineStyle: {
                 color: '#C2C2C2'
@@ -218,7 +218,6 @@
             type: 'value',
             name: '%',
             min: '0',
-            max: '5',
             axisLine: {
               lineStyle: {
                 color: '#C2C2C2'
@@ -249,7 +248,7 @@
               name: '应发电量',
               type: 'bar',
               barWidth: '15px',
-              barGap: '-100%',
+              barGap: 0,
               data: demandPower,
               // itemStyle:{  
               //   normal:{color:'#fe9700'},
