--- a/power_station/Application/Home/View/Index/entrance.html
+++ b/power_station/Application/Home/View/Index/entrance.html
@@ -69,7 +69,7 @@
 		<div class="left1">
 			<div style="width:200px;height:60px;position:absolute;left:50%;top:50%;margin:-30px 0 0 -100px">
 				<img id="logo_left" src="__PUBLIC__/images/pc_header_logo.png">
-				<span style="font-size:20px;text-align:center;margin-left:22px;margin-top:21px;float:left">新能源演示</span>
+				<span style="font-size:20px;text-align:center;margin-left:22px;margin-top:21px;float:left">电站演示</span>
 			</div>
 		</div>
 
