--- a/power_station/Application/Home/View/User/Register.html
+++ b/power_station/Application/Home/View/User/Register.html
@@ -14,7 +14,7 @@
 		<div class="R_head_container">
 			<div style="width:200px;height:50px;background-color:#fff;display:table-cell;vertical-align:middle">
 				<img src="__PUBLIC__/images/pc_header_logo.png" style="vertical-align:middle;height:25px;width:25px">
-				<span style="opacity: 0.7;font-size:18px;margin-left:10px;font-weight:700;vertical-align:bottom">新能源</span>
+				<span style="opacity: 0.7;font-size:18px;margin-left:10px;font-weight:700;vertical-align:bottom">光伏电站</span>
 			</div>
 			<ul class="pull-right nav navbar-nav text-md" style="margin-top:-50px">
 				<li><a class="li_head" href="index">进入官网</a></li>
