新增故障信息动态显示

--- a/power_station/Application/Home/View/Common/left.html
+++ b/power_station/Application/Home/View/Common/left.html
@@ -35,7 +35,7 @@
               <li><a href="{:U('AnalysisView/power_generation')}"><i class="fa fa-bar-chart-o fa-fw icon"></i>发电量</a></li>
               <li><a href="{:U('AnalysisView/meteorological_resources')}"><i class="fa fa-tint fa-fw icon"></i>气象资讯</a></li>
               <li><a href="{:U('AnalysisView/trouble')}"><i class="fa fa-wrench fa-fw icon"></i>故障统计</a></li>
-              <li><a href="{:U('AnalysisView/equipment_performance')}"><i class="fa fa-cog fa-fw icon"></i>设备性能</a></li>
+              <!-- <li><a href="{:U('AnalysisView/equipment_performance')}"><i class="fa fa-cog fa-fw icon"></i>设备性能</a></li> -->
               <li><a href="{:U('AnalysisView/ranking')}"><i class="fa fa-sort-numeric-asc fa-fw icon"></i>排名</a></li>
             </ul>
           </li>
