--- a/power_station/Application/Home/View/AnalysisView/trouble.html
+++ b/power_station/Application/Home/View/AnalysisView/trouble.html
@@ -55,10 +55,6 @@
                 <i class="fa fa-circle m-r-xs" style="color:#ffc700"></i>
                 报警
               </span>
-              <span class="m-r-xs">
-                <i class="fa fa-circle m-r-xs" style="color:#999999"></i>
-                中断
-              </span>
             </div>
             <div id="timesChart" style="width: 100%; height: 300px"></div>
           </div>
@@ -88,19 +84,6 @@
             </div>
             <div id="faultRateChart" style="width: 100%; height: 300px"></div>
           </div>
-          <div class="col-sm-12 panel">
-            <div class="pull-right" style="margin: 10px 0;">
-              <span class="m-r-xs">
-                <i class="fa fa-minus m-r-xs" style="color:#f2cd94"></i>
-                MTTR
-              </span>
-              <span class="m-r-xs">
-                <i class="fa fa-minus m-r-xs" style="color:#34c5bd"></i>
-                MTBF
-              </span>
-            </div>
-            <div id="mtChart" style="width: 100%; height: 300px"></div>
-          </div>
         </div>
 
       </div>
@@ -111,9 +94,25 @@
     <script src="__PUBLIC__/script/station/header_public.js"></script>
     <script src="__PUBLIC__/Static/echarts/dist/echarts.js"></script>
     <script type="text/javascript">
-      var times = [0,1,1,3,3,5,6,8];
-      var days = [1,2,3,4,5,6,7,8];
 
+      var trouble_times = [];
+      var warning_times = [];
+      var days = [];
+
+      $.ajax({
+        type: "POST",
+        url: "trouble_times",
+        data: "",
+        async:false,
+        success:function(data){
+            for(var val in data) {
+              days[days.length] = val;
+              trouble_times[trouble_times.length] = data[val].trouble;
+              warning_times[warning_times.length] = data[val].warning;
+              
+            }
+        }
+      });
       //timesChart视图
       var timesChart = echarts.init(document.getElementById('timesChart'));
       var option = {
@@ -151,7 +150,6 @@
           type: 'value',
           name: '台次',
           min: '0',
-          max: '5',
           axisLine: {
             lineStyle: {
               color: '#C2C2C2'
@@ -174,7 +172,7 @@
               name: '故障',
               type: 'bar',
               barWidth: '15px',
-              data: [],
+              data: trouble_times,
               itemStyle:{  
                 normal:{color:'#c0504d'},
                 //emphasis:{color:'#feb64c'}  
@@ -185,18 +183,10 @@
               type: 'bar',
               barWidth: '15px',
               barGap: '0',
-              data: [],
+              data: warning_times,
               itemStyle:{  
                 normal:{color:'#ffc700'},  
               } 
-          },
-          {
-              name: '中断',
-              type: 'bar',
-              data: [],
-              itemStyle:{  
-                normal:{color:'#999999'},  
-              }
           }
         ]
       };
@@ -240,7 +230,6 @@
           type: 'value',
           name: '故障台次',
           min: '0',
-          max: '5',
           axisLine: {
             lineStyle: {
               color: '#C2C2C2'
@@ -263,7 +252,7 @@
               name: '逆变器',
               type: 'bar',
               barWidth: '15px',
-              data: [],
+              data: trouble_times,
               itemStyle:{  
                 normal:{color:'#4879df'},
                 //emphasis:{color:'#feb64c'}  
@@ -274,7 +263,7 @@
               type: 'bar',
               barWidth: '15px',
               barGap: '0',
-              data: [],
+              data: warning_times,
               itemStyle:{  
                 normal:{color:'#97c34b'},  
               } 
@@ -282,7 +271,8 @@
           {
               name: '箱变',
               type: 'bar',
-              data: [],
+              barWidth: '15px',
+              data: trouble_times,
               itemStyle:{  
                 normal:{color:'#d583dc'},  
               }
@@ -293,6 +283,8 @@
       faultTimesChart.setOption(option);
 
       //faultRateChart视图
+      var trouble_rate = ['0','0.2','0.23','0.4','0.13','0.5','0.1','0.67','0.1','0.23','0.41','0.1',
+                          '0.35','0.45','0.67','0.1','0.2','0.2','0.1','0.4','0.1','0.5']
       var faultRateChart = echarts.init(document.getElementById('faultRateChart'));
       var option = {
         tooltip : {
@@ -329,7 +321,6 @@
           type: 'value',
           name: '次',
           min: '0',
-          max: '5',
           axisLine: {
             lineStyle: {
               color: '#C2C2C2'
@@ -351,7 +342,7 @@
           {
               name: '故障率',
               type: 'line',
-              data: [],
+              data: trouble_rate,
               itemStyle:{  
                 normal:{color:'#e06759'},
                 //emphasis:{color:'#feb64c'}  
@@ -362,91 +353,11 @@
       // 使用刚指定的配置项和数据显示图表。
       faultRateChart.setOption(option);
 
-            //faultRateChart视图
-      var mtChart = echarts.init(document.getElementById('mtChart'));
-      var option = {
-        tooltip : {
-          trigger: 'axis',
-          axisPointer : {            // 坐标轴指示器，坐标轴触发有效
-            type : 'line',// 默认为直线，可选为：'line' | 'shadow'
-            lineStyle: {
-               color: '#c3c3c3',
-            }
-          }
-        },
-        grid: {
-          left: 60,
-          right: 60,
-          top: 30,
-          botton: 0,
-        },
-        xAxis: [
-          {
-            type: 'category',
-            data: days,
-            axisLine: {
-              lineStyle: {
-                color: '#C2C2C2'
-              }
-            },
-            axisTick: [{
-                show: 'false',
-                alignWithLabel: 'true'
-            }]
-          },
-        ],
-        yAxis: {
-          type: 'value',
-          name: 'h',
-          min: '0',
-          max: '5',
-          axisLine: {
-            lineStyle: {
-              color: '#C2C2C2'
-            }
-          },
-          axisTick: [{
-            show: 'false',
-            alignWithLabel: 'true'
-          }],
-          splitLine: {
-            show: true,
-            lineStyle: {
-              color: '#C2C2C2',
-              type: 'dashed',
-            }
-          },
-        },
-        series: [
-          {
-              name: 'MTTR',
-              type: 'line',
-              data: [],
-              itemStyle:{  
-                normal:{color:'#f2cd94'},
-                //emphasis:{color:'#feb64c'}  
-              }  
-          },
-          {
-              name: 'MTBF',
-              type: 'line',
-              data: [],
-              itemStyle:{  
-                normal:{color:'#34c5bd'},
-                //emphasis:{color:'#feb64c'}  
-              }  
-          },
-        ]
-      };
-      // 使用刚指定的配置项和数据显示图表。
-      mtChart.setOption(option);
-
       setTimeout(function (){
         window.onresize = function () {
             timesChart.resize();
             faultTimesChart.resize();
             faultRateChart.resize();
-            mtChart.resize();
         }
       },200)
     </script>   
