使监控视图的表格布局更美观

--- a/power_station/Application/Home/View/Station/layout_view.html
+++ b/power_station/Application/Home/View/Station/layout_view.html
@@ -87,7 +87,7 @@
           </div>
         </div>
         <div class="lv_content1" style="background-color: #F0F3F4">
-            <div id="ZL" class="clearfix"  >
+            <div id="ZL" style="height:100%"  >
               <div class="zhenlie">
                   <img src="__PUBLIC__/images/nibianqi1.png" class="imgnibianzhan"/>
                   <span style="font-size: 14px;margin: 0;padding-left:10px;line-height:50px;">1#阵列</span>
