--- a/power_station/Application/Home/View/Station/running_log.html
+++ b/power_station/Application/Home/View/Station/running_log.html
@@ -164,7 +164,7 @@
 
 
             <div class="running_log_table">
-              <table id="troublealarm_table1" class="troublealarm_table1c">
+              <table id="troublealarm_table1" class="troublealarm_table1c" style="width:100%;">
                 
               </table>
              
