--- a/power_station/Application/Home/View/Station/trouble_alarm.html
+++ b/power_station/Application/Home/View/Station/trouble_alarm.html
@@ -122,7 +122,7 @@
             </div>
 
             <div class="trouble_alarm_table">
-              <table id="troublealarm_table1" class="troublealarm_table1c">
+              <table id="troublealarm_table1" class="troublealarm_table1c" style="width:100%;">
                 
               </table>
              
